Add clustering and PCA steps to notebook
Implemented PCA dimensionality reduction and HDBSCAN clustering in Test.ipynb. Added code to save features to features_list.csv and updated clustering parameters and outputs. This enhances the workflow for unsupervised learning and cluster analysis.

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -12,12 +12,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 3,
       "id": "77114ac2",
       "metadata": {
         "id": "77114ac2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\jakub\\Desktop\\Repozytoria Github\\Unsupervised Learning Project\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "from DataBase.DataBase_Functions import Custom_DataSet_Manager as DB\n",
         "import Config as con\n",
@@ -29,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 4,
       "id": "33f5554f",
       "metadata": {
         "id": "33f5554f"
@@ -57,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 5,
       "id": "eb09f05a",
       "metadata": {
         "colab": {
@@ -194,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 6,
       "id": "cc0975a2",
       "metadata": {
         "colab": {
@@ -208,7 +217,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'style': 'Rococo', 'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=256x256 at 0x222CEBA29F0>}\n",
+            "{'style': 'Rococo', 'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=256x256 at 0x1FAC1284770>}\n",
             "72274 15488 15488\n"
           ]
         }
@@ -222,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 7,
       "id": "90468273",
       "metadata": {},
       "outputs": [
@@ -246,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 8,
       "id": "121a8caa",
       "metadata": {},
       "outputs": [
@@ -399,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 9,
       "id": "b263d3be",
       "metadata": {
         "colab": {
@@ -424,7 +433,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'style': 'Impressionism', 'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=256x256 at 0x222CEB76240>}\n"
+            "{'style': 'Impressionism', 'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=256x256 at 0x1FAC1F001D0>}\n"
           ]
         }
       ],
@@ -443,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 10,
       "id": "b96dc2f1",
       "metadata": {
         "colab": {
@@ -468,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 11,
       "id": "679b1604",
       "metadata": {
         "colab": {
@@ -483,7 +492,7 @@
           "output_type": "stream",
           "text": [
             "Uruchomione na: cpu\n",
-            "PyTorch version: 2.9.0+cpu\n",
+            "PyTorch version: 2.9.1+cpu\n",
             "CUDA available: False\n",
             "CUDA device: None\n"
           ]
@@ -502,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 12,
       "id": "769831b9",
       "metadata": {},
       "outputs": [
@@ -523,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 13,
       "id": "iMZ8mAoi4Cv4",
       "metadata": {
         "id": "iMZ8mAoi4Cv4"
@@ -536,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 14,
       "id": "bbb839cd",
       "metadata": {},
       "outputs": [],
@@ -547,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 15,
       "id": "2a763d31",
       "metadata": {},
       "outputs": [],
@@ -560,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 16,
       "id": "00929d4a",
       "metadata": {},
       "outputs": [
@@ -681,7 +690,7 @@
               ")"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -694,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 17,
       "id": "0819037d",
       "metadata": {},
       "outputs": [
@@ -702,36 +711,36 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Przetworzono 500 obrazów w czasie 0.63 minut\n",
-            "Przetworzono 1000 obrazów w czasie 1.25 minut\n",
-            "Przetworzono 1500 obrazów w czasie 1.94 minut\n",
-            "Przetworzono 2000 obrazów w czasie 2.63 minut\n",
-            "Przetworzono 2500 obrazów w czasie 3.32 minut\n",
-            "Przetworzono 3000 obrazów w czasie 4.01 minut\n",
-            "Przetworzono 3500 obrazów w czasie 4.69 minut\n",
-            "Przetworzono 4000 obrazów w czasie 5.38 minut\n",
-            "Przetworzono 4500 obrazów w czasie 6.09 minut\n",
-            "Przetworzono 5000 obrazów w czasie 6.79 minut\n",
-            "Przetworzono 5500 obrazów w czasie 7.50 minut\n",
-            "Przetworzono 6000 obrazów w czasie 8.21 minut\n",
-            "Przetworzono 6500 obrazów w czasie 8.91 minut\n",
-            "Przetworzono 7000 obrazów w czasie 9.64 minut\n",
-            "Przetworzono 7500 obrazów w czasie 10.35 minut\n",
-            "Przetworzono 8000 obrazów w czasie 11.04 minut\n",
-            "Przetworzono 8500 obrazów w czasie 11.71 minut\n",
-            "Przetworzono 9000 obrazów w czasie 12.35 minut\n",
-            "Przetworzono 9500 obrazów w czasie 12.96 minut\n",
-            "Przetworzono 10000 obrazów w czasie 13.56 minut\n",
-            "Przetworzono 10500 obrazów w czasie 14.17 minut\n",
-            "Przetworzono 11000 obrazów w czasie 14.77 minut\n",
-            "Przetworzono 11500 obrazów w czasie 15.37 minut\n",
-            "Przetworzono 12000 obrazów w czasie 15.98 minut\n",
-            "Przetworzono 12500 obrazów w czasie 16.59 minut\n",
-            "Przetworzono 13000 obrazów w czasie 17.19 minut\n",
-            "Przetworzono 13500 obrazów w czasie 17.80 minut\n",
-            "Przetworzono 14000 obrazów w czasie 18.41 minut\n",
-            "Przetworzono 14500 obrazów w czasie 19.03 minut\n",
-            "Przetworzono 15000 obrazów w czasie 19.64 minut\n"
+            "Przetworzono 500 obrazów w czasie 0.70 minut\n",
+            "Przetworzono 1000 obrazów w czasie 1.43 minut\n",
+            "Przetworzono 1500 obrazów w czasie 2.20 minut\n",
+            "Przetworzono 2000 obrazów w czasie 2.90 minut\n",
+            "Przetworzono 2500 obrazów w czasie 3.57 minut\n",
+            "Przetworzono 3000 obrazów w czasie 4.26 minut\n",
+            "Przetworzono 3500 obrazów w czasie 4.96 minut\n",
+            "Przetworzono 4000 obrazów w czasie 5.62 minut\n",
+            "Przetworzono 4500 obrazów w czasie 6.29 minut\n",
+            "Przetworzono 5000 obrazów w czasie 6.96 minut\n",
+            "Przetworzono 5500 obrazów w czasie 7.59 minut\n",
+            "Przetworzono 6000 obrazów w czasie 8.22 minut\n",
+            "Przetworzono 6500 obrazów w czasie 8.85 minut\n",
+            "Przetworzono 7000 obrazów w czasie 9.48 minut\n",
+            "Przetworzono 7500 obrazów w czasie 10.12 minut\n",
+            "Przetworzono 8000 obrazów w czasie 11.47 minut\n",
+            "Przetworzono 8500 obrazów w czasie 13.59 minut\n",
+            "Przetworzono 9000 obrazów w czasie 14.61 minut\n",
+            "Przetworzono 9500 obrazów w czasie 15.28 minut\n",
+            "Przetworzono 10000 obrazów w czasie 15.91 minut\n",
+            "Przetworzono 10500 obrazów w czasie 16.54 minut\n",
+            "Przetworzono 11000 obrazów w czasie 17.17 minut\n",
+            "Przetworzono 11500 obrazów w czasie 17.80 minut\n",
+            "Przetworzono 12000 obrazów w czasie 18.44 minut\n",
+            "Przetworzono 12500 obrazów w czasie 19.08 minut\n",
+            "Przetworzono 13000 obrazów w czasie 19.72 minut\n",
+            "Przetworzono 13500 obrazów w czasie 20.39 minut\n",
+            "Przetworzono 14000 obrazów w czasie 21.03 minut\n",
+            "Przetworzono 14500 obrazów w czasie 21.66 minut\n",
+            "Przetworzono 15000 obrazów w czasie 22.32 minut\n"
           ]
         }
       ],
@@ -773,7 +782,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 18,
       "id": "e4c40a2d",
       "metadata": {},
       "outputs": [
@@ -795,7 +804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 19,
       "id": "9e581a72",
       "metadata": {},
       "outputs": [
@@ -814,32 +823,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 47,
+      "id": "779cdd56",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import csv\n",
+        "\n",
+        "with open(\"features_list.csv\", \"w\", newline=\"\") as f:\n",
+        "    writer = csv.writer(f)\n",
+        "    writer.writerows(features_list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
       "id": "14b55264",
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'features_list' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdecomposition\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PCA\n\u001b[32m      3\u001b[39m pca = PCA(n_components=\u001b[32m100\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m X_reduced = pca.fit_transform(\u001b[43mfeatures_list\u001b[49m)\n",
-            "\u001b[31mNameError\u001b[39m: name 'features_list' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from sklearn.decomposition import PCA\n",
         "\n",
-        "pca = PCA(n_components=100)\n",
+        "pca = PCA(n_components=200)\n",
         "X_reduced = pca.fit_transform(features_list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "id": "7454d222",
       "metadata": {},
       "outputs": [
@@ -858,11 +869,54 @@
         "import hdbscan\n",
         "\n",
         "clusterer = hdbscan.HDBSCAN(\n",
-        "    min_cluster_size=15,       # minimalny rozmiar klastra\n",
-        "    min_samples=5              # bardziej konserwatywny = mniej szumu\n",
+        "    min_cluster_size=20,       # minimalny rozmiar klastra\n",
+        "    min_samples=1             # bardziej konserwatywny = mniej szumu\n",
         ")\n",
         "\n",
-        "labels = clusterer.fit_predict(features_list)   # shape (N,)"
+        "labels = clusterer.fit_predict(X_reduced)   # shape (N,)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "id": "2bed5b09",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[-1 -1 -1 ... -1 -1 -1]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(labels)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "id": "cec91c38",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Counter({np.int64(-1): 12075, np.int64(46): 405, np.int64(47): 387, np.int64(57): 323, np.int64(39): 98, np.int64(43): 95, np.int64(19): 86, np.int64(53): 82, np.int64(10): 82, np.int64(9): 70, np.int64(54): 70, np.int64(22): 65, np.int64(6): 64, np.int64(16): 63, np.int64(0): 62, np.int64(32): 57, np.int64(34): 54, np.int64(12): 51, np.int64(58): 50, np.int64(37): 49, np.int64(7): 48, np.int64(41): 48, np.int64(51): 45, np.int64(21): 45, np.int64(52): 44, np.int64(27): 40, np.int64(56): 37, np.int64(11): 37, np.int64(1): 35, np.int64(20): 34, np.int64(5): 33, np.int64(2): 32, np.int64(8): 32, np.int64(17): 32, np.int64(15): 32, np.int64(30): 32, np.int64(4): 31, np.int64(35): 31, np.int64(24): 31, np.int64(50): 31, np.int64(31): 28, np.int64(42): 28, np.int64(55): 27, np.int64(38): 27, np.int64(40): 26, np.int64(44): 25, np.int64(28): 24, np.int64(49): 24, np.int64(13): 24, np.int64(23): 23, np.int64(3): 23, np.int64(29): 22, np.int64(33): 22, np.int64(26): 22, np.int64(45): 22, np.int64(36): 21, np.int64(18): 21, np.int64(14): 21, np.int64(48): 20, np.int64(25): 20})\n",
+            "60\n"
+          ]
+        }
+      ],
+      "source": [
+        "from collections import Counter\n",
+        "\n",
+        "vec = [1, 2, 2, 3, 4, 4, 4]\n",
+        "counts = Counter(labels)\n",
+        "\n",
+        "print(counts)\n",
+        "print(len(counts))   "
       ]
     }
   ],
